--- a/block-BHaaak/services.html
+++ b/block-BHaaak/services.html
@@ -7,20 +7,20 @@
   </head>
   <body id="top">
     <header>
-      <h1>List of Articles</h1>
+      <h1>Services</h1>
       <nav>
         <a href="index.html">About</a>
         <a href="contact.html">Contact</a>
         <a href="services.html">Services</a>
-        <a href="https://www.google.com/" target="_blank">Google</a>
+        <a href="https://www.google.com/">Google</a>
       </nav>
     </header>
     <main>
       <section>
         <article>
-          <h4>About Us</h4>
-          <img src="images/mountain_lake.jpg" alt="Mountain Lake Image">
-          <p>We are a small wildlife and landscape photography company. You may have seen our work in magazines such as National Geographic and Outdoor Photographer.</p>
+          <h4>Services We Offer</h4>
+          <img src="images/starry_lake.jpg" alt="Starry Lake Image">
+          <p>We specialize in wildlife and landscape photography. We will edit the photographs to bring out their full potential and print and frame them at your request. Our prices are listed below.</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </article>
